Fri Aug  8 19:32:45 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Command_Substitution.h:
        * cuts/utils/Node_Daemon/Command_Substitution.cpp:
        * cuts/utils/Node_Daemon/Env_Variable_Decoder.h:
        * cuts/utils/Node_Daemon/Env_Variable_Decoder.cpp:
        * cuts/utils/Node_Daemon/Node_Daemon.mpc:
        * cuts/utils/Node_Daemon/Node_Daemon_i.cpp:
        * cuts/utils/Node_Daemon/Preprocessor.h:
        * cuts/utils/Node_Daemon/Preprocessor.cpp:

          . Enable support for command substitution in the following tags:

              . <executable>
              . <arguments>
              . <workingdirectory>

            Command substitution is identified by text that is enclosed
            by the following characters: `'. Right now, the substitution
            will use only the first line of the output generated by the
            command.

          . Changed environment variable substitution to use braces { }
            instead of parenthesis.

Fri Aug  8 07:14:54 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Env_Variable_Decoder.h:
        * cuts/utils/Node_Daemon/Env_Variable_Decoder.cpp:
        * cuts/utils/Node_Daemon/Node_Daemon.mpc:
        * cuts/utils/Node_Daemon/Node_Daemon_i.h:
        * cuts/utils/Node_Daemon/Node_Daemon_i.cpp:

          . Enabled support for using environment variables in the XML
            configuration file of a cutsnode_d. Environment variables are
            defined using $().

            The following XML elements support environment variables
            definitions:

              . <executable>
              . <arguments>
              . <workingdirectory>

Fri Aug  8 04:42:07 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Node_Daemon_Event_Handler.cpp:
        * cuts/utils/Node_Daemon/Node_Daemon_Server.cpp:
        * cuts/utils/Node_Daemon/Node_Daemon_i.cpp: